@@ -25,8 +25,8 @@
 # ***** modify the following variables according to your env *****
 #
 
-DFT_BIN=~/espresso-2.1.4/bin
-TMPDIR=/scratch/cmpmopz3/WanT
+DFT_BIN=~/espresso-2.1.5/bin
+TMPDIR=~/scratch/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX=
